	* Gonryunn Quests - 0% - Botting on official Servers
	* Artifacts of God (MRO GOD ITEM QUESTS) - 1% - resources only from MRO Official
	  guide book so, probably unofficial
MasterOfMuppets
	* Working on The Sign Quest atm.
	* Updating Items / Scripts
Nexon
	* Adding in the new Abyss/Thanatos/Lighthalzen NPC's and optimizing them.

== Changelog ==

Date		Added
03/23
	* Updated Rebirth NPC/functions to use constant. Might have broken it, so do report [Vicious]
03/21
	* Improved payment healer. [Lance]
03/20
	* Added temp Job quests of Ninja and Gunslinger, thx2 Gywall [Lupus]
	* Fixed endless warping loops, thanks to Manipulator [Lupus]
	* Fixed possible Castle Economy investment overflow with Emsolute Develop learnt [Lupus]
	* Removed Berserk Potions from all shops, but Comodo [Lupus]
03/19
	* Fixed Female Thief Bug in novice land. [Vicious]
03/17
	* Added attachnpctimer to the Juperos elevator script. [Skotlex]
03/13
	* Updated the jobmaster custom script to properly use Job_* constants
	  rather than hardcoded numbers. Thanks to Pxxx for doing the update.
	  [Skotlex]
03/12
	* Amatsu Field. Replaced Hydras with official G_HYDRA (w/o drops) [Lupus]
03/11
	* Updates of eAAC scripts [MasterOfMuppets]
	* Added another weapon dealer to Einbroch, thanks to Muad_Dib [MasterOfMuppets]
	* Updated, fixed Custom Thanatos Statues Quest, thx2Justin84 for help [Lupus]
03/10
	* Fixed Turtle Island quest, got rid of 2 useless variables [Lupus]
	* Added 3 Weapon shops, thanks to Muad_Dib. Still need SPRITES ID [Lupus]
		^^^^^ could we just add spr ID's into CONST.txt?
03/07
	* Fixed some reference to old locations of the Blacksmith NPC's, Thanks to Neouni. [Poki#3]
03/06
	* Fixed Thanatos warps: tha_t06,tha_t06a,tha_t06b,tha_t05a thanks to Justin84 [Lupus]
	- Added Temp Thanatos Keys solution (more close to official than that Thanatos Statues Quest)
03/05
	* Used "Laboratory Passport" everywhere in the cube room quest, else how can ppl guess the name? xD [DracoRPG]
03/02