@@ -21,7 +21,7 @@ xmas.gat,142,256,0	warp	xmas11	3,3,xmas_in.gat,95,115
 xmas.gat,143,313,0	warp	xmas14	3,3,xmas_dun01.gat,205,17
 xmas.gat,149,240,0	warp	xmas9	3,3,xmas_in.gat,105,85
 xmas.gat,149,256,0	warp	xmas10	3,3,xmas_in.gat,105,115
-xmas.gat,150,41,0	warp	xmas2-1	3,3,xmas_fild01.gat,80,249
+xmas.gat,150,41,0	warp	xmas2-1	2,2,xmas_fild01.gat,80,246
 xmas.gat,174,161,0	warp	xmas6	3,3,xmas_in.gat,165,95
 xmas.gat,175,132,0	warp	xmas5	3,3,xmas_in.gat,155,31
 xmas.gat,182,169,0	warp	xmas7	3,3,xmas_in.gat,177,107
